# my_compiler

./: .gitignore  CMakeLists.txt  README.md
examples/: add.mc  call_stmt.mc  if_test.mc
scripts/: run_examples.sh
src/: ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semantic.cpp  semantic.h
